feat: fixed postgres repo bugs, added makefile, added public/private message postgres repo tests
todo:
1) service layer mock tests
2) handler layer mock tests
