# http5/homework/chat-server/docs/swagger.json
@@ -214,7 +214,7 @@
                 }
             }
         },
-        "/api/v1/messages/private/user/{from_username}": {
+        "/api/v1/messages/private/user": {
             "get": {
                 "security": [
                     {
@@ -249,9 +249,9 @@
                     },
                     {
                         "type": "string",
-                        "description": "User FromUsername",
+                        "description": "from_username",
                         "name": "from_username",
-                        "in": "path",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -504,17 +504,12 @@
             "type": "object",
             "required": [
                 "content",
-                "from_username",
                 "to_username"
             ],
             "properties": {
                 "content": {
                     "type": "string",
                     "maxLength": 2000,
-                    "minLength": 1
-                },
-                "from_username": {
-                    "type": "string",
                     "minLength": 1
                 },
                 "to_username": {
@@ -526,17 +521,12 @@
         "request.SendPublicMessageRequest": {
             "type": "object",
             "required": [
-                "content",
-                "from_username"
+                "content"
             ],
             "properties": {
                 "content": {
                     "type": "string",
                     "maxLength": 2000,
-                    "minLength": 1
-                },
-                "from_username": {
-                    "type": "string",
                     "minLength": 1
                 }
             }
