# http5/homework/chat-server/internal/handler/request/send_private_message.go
@@ -3,9 +3,8 @@ package request
 import "github.com/go-playground/validator/v10"
 
 type SendPrivateMessageRequest struct {
-	ToUsername   string `json:"to_username" validate:"required,min=1"`
-	FromUsername string `json:"from_username" validate:"required,min=1"`
-	Content      string `json:"content" validate:"required,min=1,max=2000"`
+	ToUsername string `json:"to_username" validate:"required,min=1"`
+	Content    string `json:"content" validate:"required,min=1,max=2000"`
 }
 
 func (sm *SendPrivateMessageRequest) Validate(valid *validator.Validate) error {
