# http5/homework/chat-server/internal/handler/request/send_public_message.go
@@ -3,8 +3,7 @@ package request
 import "github.com/go-playground/validator/v10"
 
 type SendPublicMessageRequest struct {
-	FromUsername string `json:"from_username" validate:"required,min=1"`
-	Content      string `json:"content" validate:"required,min=1,max=2000"`
+	Content string `json:"content" validate:"required,min=1,max=2000"`
 }
 
 func (sm *SendPublicMessageRequest) Validate(valid *validator.Validate) error {
